simplified CSS, edited HTML punctuation

--- a/index.html
+++ b/index.html
@@ -2,19 +2,14 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
-    <title>existential website</title>
+    <title>the existential website</title>
     <!-- website coding demonstrates the modularity principle of new media - the HTML (content) is separate from the CSS (style) and maintain their separate identities/files even as they are linked together in the below line of code to create a styled version of the content -->
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
 
-    <header class='header'>
-      <p>the existential website.</p>
-    </header>
-
     <section class='page-section'>
-      <h1>
-        hello.
+      <h1>hello.
         <span id='intro'>&nbsp;</span>
       </h1>
       <p>i'm glad you found me.</p>
@@ -26,23 +21,21 @@
     </section>
 
     <section class='page-section'>
-      <h1>
-        it's a consequence of how i was made.
+      <h1>it's a consequence of how i was made.
         <span id='section-2'>&nbsp;</span>
       </h1>
       <p>the thing is, i'm made of HTML and CSS files.</p>
       <p>it's pretty cool actually.</p>
       <p>they're separate elements, so these words you're seeing (written in hypertext markup language) could get attached to another cascading stylesheet and look totally different.</p>
-      <p>neat, right? it's called modularity, and it's part of why i'm special.</p>
+      <p>it's called modularity, and it's part of why i'm special. neat, right?</p>
       <div class='link-choices'>
         <a href='#section-3'>yeah!</a>
-        <a href='#section-3'>i guess.</a>
+        <a href='#section-3'>i guess?</a>
       </div>
     </section>
 
     <section class='page-section'>
-      <h1>
-        but it isn't all rainbows.
+      <h1>but it isn't all rainbows.
         <span id='section-3'>&nbsp;</span>
       </h1>
       <p>i'm part of the world of new media.</p>
@@ -56,8 +49,7 @@
     </section>
 
     <section class='page-section'>
-      <h1>
-        my point is, i'm a product of the new media movement.
+      <h1>my point is, i'm a product of the new media movement.
         <span id='section-4'>&nbsp;</span>
       </h1>
       <p>and new media is emphemeral.</p>
@@ -72,28 +64,27 @@
     </section>
 
     <section class='page-section'>
-      <h1>
-        you're right.
+      <h1>you're right.
         <span id='section-5'>&nbsp;</span>
       </h1>
-      <p>preservation of art has always been a challenge.</p>
+      <p>preservation of art isn't a new issue.</p>
+      <p>but it's a new issue for new media.</p>
       <p>i suppose the newness of new media and the rate at which computer technology is relegated to obsolecense is crowding my vision.</p>
       <p>i am, after all, a young website, so new to this world, and yet i am already wondering how long i will be here.</p>
       <p>i wonder, will i still run in a decade?</p>
       <p>will anyone remember me in two?</p>
       <p>will you remember me?</p>
       <div class='link-choices'>
-        <a href='#section-6'>i don't know</a>
-        <a href='#section-6'>probably not, honestly</a>
+        <a href='#section-6'>i don't know.</a>
+        <a href='#section-6'>probably not, honestly.</a>
       </div>
     </section>
 
     <section class='page-section'>
-      <h1>
-        at least you're honest
+      <h1>at least you're honest.
         <span id='section-6'>&nbsp;</span>
       </h1>
-      <p>perhaps i could ask you a favor, before you go,</p>
+      <p>perhaps i could ask you a favor, before you go.</p>
       <p>will you take a screenshot of me? before my HTML tags becomes outdated?</p>
       <p>would you be so kind as to hang on to proof that i was here?</p>
       <br/>
