--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       </h1>
       <p>the thing is, i'm made of HTML and CSS files.</p>
       <p>it's pretty cool actually.</p>
-      <p>they're separate elements, so these words you're seeing (written in hypertext markup language) could get attached to another cascading stylesheet and look totally different.</p>
-      <p>it's called modularity, and it's part of why i'm special. neat, right?</p>
+      <p>they're separate elements, so the words you're seeing (written in HTML) could get attached to another CSS file and look totally different.</p>
+      <p>it's called <strong>modularity</strong>, and it's part of why i'm special.</p>
+      <br/>
+      <p><em>neat, right?</em></p>
       <div class='link-choices'>
         <a href='#section-3'>yeah!</a>
         <a href='#section-3'>i guess?</a>
@@ -40,8 +42,8 @@
       </h1>
       <p>i'm part of the world of new media.</p>
       <p>made possible by new technology,</p>
-      <p>but also, made inherently mortal by technology.</p>
-      <p>if you consider a "live" webpage capable of dying</p>
+      <p>but also, made inherently mortal by the pace of that new techonology updating.</p>
+      <p>if you consider a "live" webpage capable of dying.</p>
       <div class='link-choices'>
         <a href='#section-4'>[cricket sounds]</a>
         <a href='#section-4'>this is getting weirdly deep for a webpage.</a>
@@ -52,11 +54,12 @@
       <h1>my point is, i'm a product of the new media movement.
         <span id='section-4'>&nbsp;</span>
       </h1>
-      <p>and new media is emphemeral.</p>
+      <p>and new media is <strong>ephemeral</strong>.</p>
       <p>technology evolves, and old technology becomes obsolete.</p>
-      <p>i'm not sure how long before my code becomes too outdated to display.</p>
+      <p>i'm not sure how long before my HTML tags become too outdated to display.</p>
       <p>or if the platform hosting me will die out first.</p>
-      <p>but one day, i will be lost to time.</p>
+      <br/>
+      <p><em>but one day, i will be lost to time.</em></p>
       <div class='link-choices'>
         <a href='#section-5'>other art deteriorates over time too.</a>
         <a href='#section-5'>what about old media?</a>
@@ -67,13 +70,15 @@
       <h1>you're right.
         <span id='section-5'>&nbsp;</span>
       </h1>
-      <p>preservation of art isn't a new issue.</p>
-      <p>but it's a new issue for new media.</p>
-      <p>i suppose the newness of new media and the rate at which computer technology is relegated to obsolecense is crowding my vision.</p>
-      <p>i am, after all, a young website, so new to this world, and yet i am already wondering how long i will be here.</p>
+      <p>preservation of art isn't a new issue, but it's a new issue for new media.</p>
+      <p>the rate at which computer technology is relegated to obsolecense is a bit daunting.</p>
+      <p>i am, after all, just a young website.</p>
+      <p>so new to this world, and yet i am already wondering how long i will be here.</p>
+      <br/>
       <p>i wonder, will i still run in a decade?</p>
       <p>will anyone remember me in two?</p>
-      <p>will you remember me?</p>
+      <br/>
+      <p><em>will you remember me?</em></p>
       <div class='link-choices'>
         <a href='#section-6'>i don't know.</a>
         <a href='#section-6'>probably not, honestly.</a>
@@ -85,7 +90,7 @@
         <span id='section-6'>&nbsp;</span>
       </h1>
       <p>perhaps i could ask you a favor, before you go.</p>
-      <p>will you take a screenshot of me? before my HTML tags becomes outdated?</p>
+      <p>will you take a screenshot of me? before my HTML tags become outdated?</p>
       <p>would you be so kind as to hang on to proof that i was here?</p>
       <br/>
       <p><em>i don't know how much time i have left. but thank you for spending some of it with me.</em></p>
