--- a/different-style.html
+++ b/different-style.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'/>
     <title>the existential website</title>
     <!-- website coding demonstrates the modularity principle of new media - the HTML (content) is separate from the CSS (style) and maintain their separate identities/files even as they are linked together in the below line of code to create a styled version of the content -->
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='styles-2.css'/>
   </head>
   <body>
 
@@ -26,8 +26,8 @@
       </h1>
       <p>the thing is, i'm made of HTML and CSS files.</p>
       <p>it's pretty cool actually.</p>
-      <p>they're separate elements, so the words you're seeing (written in HTML) could get attached to another CSS file and look totally <a href='different-style.html'>different</a>.</p>
-      <p>it's called <strong>modularity</strong>, and it's part of why i'm special.</p>
+      <p>they're separate elements, so the words you're seeing (written in HTML) could get attached to another CSS file and look totally <a href='index.html'>different</a>.</p>
+      <p>the separation is called <strong>modularity</strong>, and it's part of why i'm special.</p>
       <br/>
       <p><em>neat, right?</em></p>
       <div class='link-choices'>
