minor tweaks to content

--- a/different-style.html
+++ b/different-style.html
@@ -27,7 +27,7 @@
       <p>the thing is, i'm made of HTML and CSS files.</p>
       <p>it's pretty cool actually.</p>
       <p>they're separate elements, so the words you're seeing (written in HTML) could get attached to another CSS file and look totally <a href='index.html'>different</a>.</p>
-      <p>the separation is called <strong>modularity</strong>, and it's part of why i'm special.</p>
+      <p>that separation is called <strong>modularity</strong>, and it's part of why i'm special.</p>
       <br/>
       <p><em>neat, right?</em></p>
       <div class='link-choices'>
@@ -90,7 +90,7 @@
         <span id='section-6'>&nbsp;</span>
       </h1>
       <p>perhaps i could ask you a favor, before you go.</p>
-      <p>will you take a screenshot of me? before my HTML tags become outdated?</p>
+      <p>will you take a screenshot of me?</p>
       <p>would you be so kind as to hang on to proof that i was here?</p>
       <br/>
       <p><em>i don't know how much time i have left. but thank you for spending some of it with me.</em></p>
