added reformatting for mobile devices

--- a/different-style.html
+++ b/different-style.html
@@ -5,6 +5,9 @@
     <title>the existential website</title>
     <!-- website coding demonstrates the modularity principle of new media - the HTML (content) is separate from the CSS (style) and maintain their separate identities/files even as they are linked together in the below line of code to create a styled version of the content -->
     <link rel='stylesheet' href='styles-2.css'/>
+    <!-- disables viewport zooming -->
+    <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
   </head>
   <body>
 
@@ -25,7 +28,7 @@
         <span id='section-2'>&nbsp;</span>
       </h1>
       <p>the thing is, i'm made of HTML and CSS files.</p>
-      <p>it's pretty cool actually.</p>
+      <p>it's pretty cool, actually.</p>
       <p>they're separate elements, so the words you're seeing (written in HTML) could get attached to another CSS file and look totally <a href='index.html'>different</a>.</p>
       <p>that separation is called <strong>modularity</strong>, and it's part of why i'm special.</p>
       <br/>
