--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       <h1>hello.
         <span id='intro'>&nbsp;</span>
       </h1>
+
+      <!--contentless divs for CSS illustration-->
+      <div class='robot-face'>
+        <div class='right-eye'></div>
+        <div class='mouth'></div>
+        <div class='left-eye'></div>
+      </div>
+
       <p>i'm glad you found me.</p>
       <p>i'm not sure how much time i have left.</p>
       <div class='link-choices'>
